fix padding issue with talk titles on mobile

--- a/src/stylesheets/partials/_queries.sass
+++ b/src/stylesheets/partials/_queries.sass
@@ -25,7 +25,7 @@
   h2
     font-size: 1.6em
 
-  nav#main 
+  nav#main
     li a
       font-size: 1.1em
       padding: 15px
@@ -56,10 +56,10 @@
       position: static
       width: 60%
       +rotate(0)
-      
+
   #speakers li
 
-    
+
   #sponsors
     .big-sponsor
       display: block
@@ -77,7 +77,7 @@
   h2
     font-size: 1.5em
 
-  nav#main 
+  nav#main
     text-align: center
     ul
       border-bottom: 1px solid rgba(255, 255, 255, 0.1)
@@ -86,7 +86,7 @@
       padding: 10px
 
   header#header
-    
+
     h2, h1
       display: block
       float: none
@@ -100,7 +100,7 @@
     h3
       font-size: 3.3em
       padding-top: 40px
-      
+
   #schedule .half
     clear: both
     display: block
@@ -109,19 +109,19 @@
     width: auto
     li
       padding: 10px 0
-      
+
   #speakers li
     margin: 0 3% 2em
     min-height: 260px
     width: 27%
-    
+
   .fifth
     width: 25%
-    
+
   #venue .wrapper > a
     margin-left: 0
     padding-left: 30px
-  
+
   #features .third
     margin-bottom: 15px
 
@@ -129,7 +129,7 @@
     display: inline-block
   nav#main .register-now
     display: none
-    
+
 @media only screen and (min-width: 540px) and (max-width: 740px)
   header#header .features
     p
@@ -137,11 +137,11 @@
     li .left
       float: none
       width: 50%
-    
+
 @media only screen and (max-width: 540px)
   .wrapper
     min-width: 300px
-    
+
   #main_nav, .half, .third, .two-thirds, .fourth
     clear: both
     display: block
@@ -149,11 +149,11 @@
     width: 100%
   #schedule .half
     padding: 0
-    
+
   h2
     font-size: 1.5em
-  
-  nav#main 
+
+  nav#main
     text-align: center
     .wrapper
       padding: 0
@@ -164,7 +164,7 @@
     li a
       font-size: 12px
       padding: 10px 2px
-  
+
   header#header
     h1
       padding: 10px 0 0
@@ -176,7 +176,7 @@
     a.action
       margin-left: 10%
       width: 80%
-    
+
   #speakers
     li
       border-top: 1px solid rgba(255, 255, 255, 0.1)
@@ -197,26 +197,27 @@
         right: 0
       .twitter img
         right: 9%
-      h3, p, ul
+      h3, ul
         padding-left: 20%
       h3
         font-size: 18px
         margin-bottom: .5em
       p
         margin-bottom: 1.2em
+        padding-left: 1em
       .detail
         display: none
 
     .wrapper > ul > li
       margin: 0 0 .1em
-    
+
   .fifth
     width: 50%
 
   #sponsors .row
     span, .info
       display: none
-    
+
   #blog article
     margin: 0
     padding: 0
